# cardano-db-sync

./: .gitignore  .hlint.yaml  .stack-to-nix.cache  .stylish-haskell.yaml  ASYNC.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.rst  Dockerfile  Readme.md  SECURITY.md  bors.toml  cabal.project  cabal.project.freeze  cabal.project.local  default.nix  docker-compose.example.yml  docker-compose.yml  docker-test.yml  flake.nix  fourmolu.yaml  hie.yaml  lib.nix  log-configuration.yaml  module.nix  niv-shell.nix  nix-shell.project  nixops.nix  release.nix  shell.nix  snapshot.yaml  stack.yaml  usage.nix
cardano-chain-gen/: CHANGELOG.md  Setup.hs  cardano-chain-gen.cabal
cardano-chain-gen/bench/: Main.hs
cardano-chain-gen/bench/Cardano/Db/: Bench.hs
cardano-chain-gen/bench/benchfiles/: pgpass-bench
cardano-chain-gen/bench/benchfiles/config/: genesis.json  test-db-sync-config.json
cardano-chain-gen/bench/benchfiles/fingerprint/: createMaTxOut_10  createMaTxOut_500  createUTXO'_100  createUTXO_1000  delegateAndSend_1  delegateAndSend_10  delegateAndSend_100  delegateAndSend_400  emptyBlock_10000  emptyBlock_50  emptyBlock_5000  registerAddressess_200
cardano-chain-gen/src/Cardano/Mock/: Chain.hs  ChainDB.hs  Query.hs  UnifiedApi.hs
cardano-chain-gen/test/: Main.hs
cardano-chain-gen/test/testfiles/: invalid-vote-doNotList.jsonld  pgpass-testing  pgpass-testing-macos
cardano-chain-gen/test/testfiles/config-alonzo/: test-config.json
cardano-chain-gen/test/testfiles/config-alonzo-insert-options/: test-db-sync-config.json
cardano-chain-gen/test/testfiles/config-babbage-insert-options/: genesis.conway.json  genesis.json  test-config.json
cardano-chain-gen/test/testfiles/config-conway/: genesis.conway.json  genesis.json  test-config.json  test-db-sync-config-bootstrap.json  test-db-sync-config-consumed.json  test-db-sync-config-disable-conway.json  test-db-sync-config-enable-conway.json  test-db-sync-config-keep-metadata.json  test-db-sync-config-no-ledger.json  test-db-sync-config-no-metadata.json  test-db-sync-config-no-multi-assets.json  test-db-sync-config-no-plutus.json  test-db-sync-config-prune.json  (+1 more)
cardano-chain-gen/test/testfiles/config-conway-bootstrap/: genesis.alonzo.json  genesis.byron.json  genesis.json  test-config.json  test-db-sync-config.json
cardano-chain-gen/test/testfiles/config-conway-hf-epoch1/: genesis.conway.json  test-config.json
cardano-chain-gen/test/testfiles/config-conway-insert-options/: test-config.json  test-db-sync-config.json
cardano-chain-gen/test/testfiles/config-conway-missing-genesis/: genesis.spec.json
cardano-chain-gen/test/testfiles/config-conway-no-pools/: genesis.conway.json  genesis.json
cardano-chain-gen/test/testfiles/config-conway-no-stakes/: genesis.json  test-config.json
cardano-chain-gen/test/testfiles/config-conway-rewards-rho/: genesis.json
cardano-db/: CHANGELOG.md  cardano-db.cabal
cardano-db-sync/: CHANGELOG.md  Setup.hs  cardano-db-sync.cabal  schema
cardano-db-sync-extended/: CHANGELOG.md  Setup.hs  cardano-db-sync-extended.cabal
cardano-db-sync-extended/app/: cardano-db-sync-extended.hs
cardano-db-sync-smash/: CHANGELOG.md  NOTICE  cardano-db-sync-smash.cabal
cardano-db-sync-smash/app/: cardano-db-sync-smash.hs
cardano-db-sync/app/: cardano-db-sync.hs  cardano-tx-body.hs  http-get-json-metadata.hs  test-http-get-json-metadata.hs
cardano-db-sync/src/: ApiTest.hs
cardano-db-sync/src/Cardano/: DbSync.hs
cardano-db-sync/test/: Main.hs  Test.hs
cardano-db-sync/test/Cardano/: DbSyncTest.hs
cardano-db-sync/test/testfiles/: invalid-vote-malformed-json.jsonld  invalid-vote-type-error.jsonld  invalid-vote-wrong-structure.jsonld  valid-vote-minimal.jsonld
cardano-db-tool/: CHANGELOG.md  cardano-db-tool.cabal
cardano-db-tool/app/: cardano-db-tool.hs
cardano-db-tool/src/Cardano/: DbTool.hs
cardano-db-tool/test/: test.hs
cardano-db/app/: cardano-db-tool.hs  gen-schema-docs.hs
cardano-db/src/Cardano/: Db.hs
cardano-db/test/: cardano-db-test.cabal  schema-rollback.hs  test-db.hs  test.hs
cardano-db/test/schema/: migration-1-0000-20190730.sql
cardano-explorer/: CHANGELOG.md  cardano-explorer.cabal  shell.nix
cardano-explorer-core/: CHANGELOG.md  cardano-explorer-core.cabal
cardano-explorer-core/app/: cardano-explorer-db-manage.hs
cardano-explorer-core/src/Explorer/: Core.hs
cardano-explorer-core/test/: test-db.hs  test.hs
cardano-explorer-db/: CHANGELOG.md  cardano-explorer-db.cabal  shell.nix
cardano-explorer-db-node/: cardano-explorer-db-node.cabal  shell.nix
cardano-explorer-db-node/app/: CLI.hs  cardano-explorer-db-node.hs
cardano-explorer-db-node/src/Explorer/: Node.hs
cardano-explorer-db/app/: cardano-explorer-db-manage.hs  cardano-explorer-db-tool.hs
cardano-explorer-db/app/Explorer/: App.hs
cardano-explorer-db/src/Explorer/: DB.hs
cardano-explorer-db/test/: cardano-explorer-db-test.cabal  test-db.hs  test.hs
cardano-explorer-node/: CHANGELOG.md  cardano-explorer-node.cabal  shell.nix
cardano-explorer-node/app/: cardano-explorer-node.hs
cardano-explorer-node/src/Explorer/: Node.hs
cardano-explorer-webapi/: CHANGELOG.md  cardano-explorer-webapi.cabal  shell.nix  swagger.yaml
cardano-explorer-webapi/app/: cardano-webapi-compare.hs  cardano-webapi-validate.hs
cardano-explorer-webapi/src/Explorer/: Web.hs
cardano-explorer-webapi/test/: test.hs
cardano-explorer/app/: cardano-explorer.hs  mock.hs
cardano-explorer/src/Explorer/: Web.hs
cardano-explorer/test/: test.hs
cardano-extended-db-node/: CHANGELOG.md  cardano-extended-db-node.cabal
cardano-extended-db-node/app/: cardano-extended-db-node.hs
cardano-smash-server/: CHANGELOG.md  cardano-smash-server.cabal
cardano-smash-server/app/: cardano-smash-server.hs
cardano-sync/: CHANGELOG.md  cardano-sync.cabal
cardano-sync/src/Cardano/: Sync.hs
cardano-tx-submit/: CHANGELOG.md  Readme.md  cardano-tx-submit.cabal  testing-tx-submit.md
cardano-tx-submit/app/: cardano-tx-submit-webapi.hs
cardano-tx-submit/src/Cardano/: TxSubmit.hs
smash-servant-types/: smash-servant-types.cabal
(+1297 files in other folders)
