cabal-version:          2.4

-- http://haskell.org/cabal/users-guide/

name:                   cardano-chain-gen
version:                11.0.4
synopsis:               A fake chain generator for testing cardano DB sync.
description:            A fake chain generator for testing cardano DB sync.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md
                        schema/*.sql

custom-setup
  setup-depends:
                        base
                      , Cabal
                      , bytestring
                      , cardano-crypto-class
                      , directory
                      , filepath

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:
                        Cardano.Mock.Chain
                        Cardano.Mock.ChainDB
                        Cardano.Mock.ChainSync.Server
                        Cardano.Mock.ChainSync.State
                        Cardano.Mock.Forging.Interpreter
                        Cardano.Mock.Forging.Tx.Alonzo
                        Cardano.Mock.Forging.Tx.Generic
                        Cardano.Mock.Forging.Tx.Shelley
                        Cardano.Mock.Forging.Types

  build-depends:        base                            >= 4.14         && < 4.16
                      , async
                      , aeson
                      , binary
                      , bytestring
                      , cardano-binary
                      , cardano-client
                      , cardano-crypto
                      , cardano-crypto-class
                      , cardano-crypto-praos
                      , cardano-crypto-wrapper
                      , cardano-ledger-alonzo
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-ledger-shelley-ma
                      , cardano-node
                      , cardano-prelude
                      , cardano-protocol-tpraos
                      , cardano-slotting
                      , cborg
                      , containers
                      , contra-tracer
                      , directory
                      , esqueleto
                      , extra
                      , filepath
                      , groups
                      , http-client
                      , http-client-tls
                      , http-types
                      , iohk-monitoring
                      , io-classes
                      , lifted-base
                      , memory
                      , mtl
                      , monad-control
                      , network-mux
                      , nothunks
                      , ouroboros-consensus
                      , ouroboros-consensus-byron
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-shelley
                      , ouroboros-network
                      , ouroboros-network-framework
                      , persistent
                      , persistent-postgresql
                      , pretty-show
                      , prometheus
                      , random-shuffle
                      , serialise
                      , small-steps
                      , split
                      , stm
                      , strict
                      , strict-containers
                      , swagger2
                      , text
                      , text-ansi
                      , time
                      , transformers
                      , transformers-except
                      , typed-protocols
                      , unix
                      , vector
                      , yaml

test-suite cardano-chain-gen
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  main-is:              Main.hs
  hs-source-dirs:       gen, test

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe
                        -threaded

  autogen-modules:      Paths_cardano_chain_gen
                        MigrationValidations
  other-modules:        Paths_cardano_chain_gen
                        MigrationValidations

  other-modules:        Test.Cardano.Db.Mock.Config
                        Test.Cardano.Db.Mock.Examples
                        Test.Cardano.Db.Mock.Unit
                        Test.Cardano.Db.Mock.Validate

  build-depends:        async
                      , base                            >= 4.12         && < 4.15
                      , bytestring
                      , cardano-api
                      , cardano-cli
                      , cardano-config
                      , cardano-db
                      , cardano-db-sync
                      , cardano-chain-gen
                      , cardano-ledger-alonzo
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-ledger-shelley-ma
                      , cardano-node
                      , cardano-prelude
                      , cardano-slotting
                      , containers
                      , contra-tracer
                      , directory
                      , extra
                      , filepath
                      , mtl
                      , io-classes
                      , optparse-applicative
                      , ouroboros-network
                      , silently
                      , stm
                      , strict-containers
                      , tasty
                      , tasty-quickcheck
                      , text
                      , transformers
                      , tree-diff
                      , tasty-hunit
                      , monad-logger
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-shelley
                      , ouroboros-network
                      , ouroboros-network-framework
                      , persistent
                      , postgresql-simple
