cabal-version:          3.0

name:                   cardano-chain-gen
version:                13.1.1.0
synopsis:               A fake chain generator for testing cardano DB sync.
description:            A fake chain generator for testing cardano DB sync.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              2020-2023 Input Output Global Inc (IOG).
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md
                        schema/*.sql

custom-setup
  setup-depends:
                        base
                      , Cabal
                      , bytestring
                      , cardano-crypto-class
                      , directory
                      , filepath

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns

  exposed-modules:
                        Cardano.Mock.Chain
                        Cardano.Mock.ChainDB
                        Cardano.Mock.ChainSync.Server
                        Cardano.Mock.ChainSync.State
                        Cardano.Mock.Forging.Crypto
                        Cardano.Mock.Forging.Interpreter
                        Cardano.Mock.Forging.Tx.Alonzo
                        Cardano.Mock.Forging.Tx.Alonzo.Scenarios
                        Cardano.Mock.Forging.Tx.Alonzo.ScriptsExamples
                        Cardano.Mock.Forging.Tx.Babbage
                        Cardano.Mock.Forging.Tx.Babbage.Scenarios
                        Cardano.Mock.Forging.Tx.Generic
                        Cardano.Mock.Forging.Tx.Shelley
                        Cardano.Mock.Forging.Types

  build-depends:        base                            >= 4.14         && < 4.17
                      , async
                      , aeson
                      , binary
                      , bytestring
                      , cardano-api
                      , cardano-binary
                      , cardano-client
                      , cardano-crypto
                      , cardano-crypto-class
                      , cardano-crypto-praos
                      , cardano-crypto-wrapper
                      , cardano-data
                      , cardano-ledger-allegra
                      , cardano-ledger-alonzo
                      , cardano-ledger-babbage
                      , cardano-ledger-binary
                      , cardano-ledger-byron
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-ledger-mary
                      , cardano-node
                      , cardano-prelude
                      , cardano-protocol-tpraos
                      , cardano-slotting
                      , cardano-strict-containers
                      , cborg
                      , vector-map
                      , containers
                      , contra-tracer
                      , directory
                      , esqueleto
                      , extra
                      , filepath
                      , groups
                      , http-client
                      , http-client-tls
                      , http-types
                      , iohk-monitoring
                      , io-classes
                      , lifted-base
                      , memory
                      , mtl
                      , monad-control
                      , microlens
                      , network-mux
                      , nothunks
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-diffusion
                      , ouroboros-consensus-protocol
                      , ouroboros-network
                      , ouroboros-network-api
                      , ouroboros-network-framework
                      , ouroboros-network-protocols
                      , persistent
                      , persistent-postgresql
                      , plutus-core
                      , plutus-ledger-api:{plutus-ledger-api, plutus-ledger-api-testlib}
                      , pretty-show
                      , prometheus
                      , random-shuffle
                      , serialise
                      , set-algebra
                      , small-steps
                      , split
                      , stm
                      , strict
                      , strict-stm
                      , swagger2
                      , text
                      , time
                      , transformers
                      , transformers-except
                      , typed-protocols
                      , unix
                      , vector
                      , yaml

test-suite cardano-chain-gen
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  main-is:              Main.hs
  hs-source-dirs:       gen
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Wcompat
                        -fwarn-redundant-constraints
                        -fwarn-incomplete-patterns
                        -fwarn-unused-imports
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wno-unsafe
                        -threaded

  autogen-modules:      Paths_cardano_chain_gen
                        MigrationValidations
  other-modules:        Paths_cardano_chain_gen
                        MigrationValidations

  other-modules:        Test.Cardano.Db.Mock.Config
                        Test.Cardano.Db.Mock.Examples
                        Test.Cardano.Db.Mock.Property.Property
                        Test.Cardano.Db.Mock.Unit.Alonzo
                        Test.Cardano.Db.Mock.Unit.Babbage
                        Test.Cardano.Db.Mock.UnifiedApi
                        Test.Cardano.Db.Mock.Validate

  build-depends:        async
                      , base                            >= 4.14         && < 4.17
                      , bytestring
                      , cardano-api
                      , cardano-cli
                      , cardano-crypto-class
                      , cardano-db
                      , cardano-db-sync
                      , cardano-chain-gen
                      , cardano-ledger-alonzo
                      , cardano-ledger-core
                      , cardano-ledger-mary
                      , cardano-ledger-shelley
                      , cardano-node
                      , cardano-prelude
                      , cardano-slotting
                      , cardano-smash-server
                      , containers
                      , contra-tracer
                      , directory
                      , esqueleto
                      , extra
                      , filepath
                      , mtl
                      , io-classes
                      , optparse-applicative
                      , ouroboros-network
                      , plutus-ledger-api
                      , silently
                      , stm
                      , strict-stm
                      , tasty
                      , tasty-quickcheck
                      , text
                      , transformers
                      , transformers-except
                      , tree-diff
                      , tasty-hunit
                      , monad-logger
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-protocol
                      , ouroboros-network
                      , ouroboros-network-api
                      , ouroboros-network-framework
                      , persistent
                      , persistent-postgresql
                      , postgresql-simple
                      , QuickCheck
                      , quickcheck-state-machine
