cabal-version:          3.0

name:                   cardano-chain-gen
version:                13.1.1.3
synopsis:               A fake chain generator for testing cardano DB sync.
description:            A fake chain generator for testing cardano DB sync.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              2020-2023 Input Output Global Inc (IOG).
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md
                        schema/*.sql

custom-setup
  setup-depends:
                        base
                      , Cabal
                      , bytestring
                      , cardano-crypto-class
                      , directory
                      , filepath

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:
                        Cardano.Mock.Chain
                        Cardano.Mock.ChainDB
                        Cardano.Mock.ChainSync.Server
                        Cardano.Mock.ChainSync.State
                        Cardano.Mock.Forging.Crypto
                        Cardano.Mock.Forging.Interpreter
                        Cardano.Mock.Forging.Tx.Alonzo
                        Cardano.Mock.Forging.Tx.Alonzo.Scenarios
                        Cardano.Mock.Forging.Tx.Alonzo.ScriptsExamples
                        Cardano.Mock.Forging.Tx.Babbage
                        Cardano.Mock.Forging.Tx.Babbage.Scenarios
                        Cardano.Mock.Forging.Tx.Generic
                        Cardano.Mock.Forging.Tx.Shelley
                        Cardano.Mock.Forging.Types

  build-depends:        base                            >= 4.14         && < 5
                      , async
                      , aeson
                      , bytestring
                      , cardano-binary
                      , cardano-crypto-class
                      , cardano-ledger-allegra
                      , cardano-ledger-alonzo
                      , cardano-ledger-babbage
                      , cardano-ledger-binary
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , cardano-ledger-mary
                      , cardano-prelude
                      , cardano-slotting
                      , cardano-strict-containers
                      , cborg
                      , containers
                      , contra-tracer
                      , directory
                      , extra
                      , mtl
                      , microlens
                      , nothunks
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano
                      , ouroboros-consensus-diffusion
                      , ouroboros-consensus-protocol
                      , ouroboros-network
                      , ouroboros-network-api
                      , ouroboros-network-framework
                      , ouroboros-network-protocols
                      , plutus-core
                      , plutus-ledger-api:{plutus-ledger-api-testlib}
                      , serialise
                      , strict-stm
                      , text
                      , typed-protocols

test-suite cardano-chain-gen
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  main-is:              Main.hs
  hs-source-dirs:       gen
  hs-source-dirs:       test

  ghc-options:          -Wall
                        -Wall
                        -Werror
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded

  autogen-modules:      Paths_cardano_chain_gen
                        MigrationValidations
  other-modules:        Paths_cardano_chain_gen
                        MigrationValidations

  other-modules:        Test.Cardano.Db.Mock.Config
                        Test.Cardano.Db.Mock.Examples
                        Test.Cardano.Db.Mock.Property.Property
                        Test.Cardano.Db.Mock.Unit.Alonzo
                        Test.Cardano.Db.Mock.Unit.Alonzo.Plutus
                        Test.Cardano.Db.Mock.Unit.Alonzo.PoolAndSmash
                        Test.Cardano.Db.Mock.Unit.Alonzo.Reward
                        Test.Cardano.Db.Mock.Unit.Alonzo.Simple
                        Test.Cardano.Db.Mock.Unit.Alonzo.Stake
                        Test.Cardano.Db.Mock.Unit.Alonzo.Tx
                        Test.Cardano.Db.Mock.Unit.Babbage
                        Test.Cardano.Db.Mock.Unit.Babbage.CommandLineArg.ConfigFile
                        Test.Cardano.Db.Mock.Unit.Babbage.CommandLineArg.EpochDisabled
                        Test.Cardano.Db.Mock.Unit.Babbage.CommandLineArg.ForceIndex
                        Test.Cardano.Db.Mock.Unit.Babbage.CommandLineArg.MigrateConsumedPruneTxOut
                        Test.Cardano.Db.Mock.Unit.Babbage.InlineAndReference
                        Test.Cardano.Db.Mock.Unit.Babbage.Other
                        Test.Cardano.Db.Mock.Unit.Babbage.Plutus
                        Test.Cardano.Db.Mock.Unit.Babbage.Reward
                        Test.Cardano.Db.Mock.Unit.Babbage.Rollback
                        Test.Cardano.Db.Mock.Unit.Babbage.Simple
                        Test.Cardano.Db.Mock.Unit.Babbage.Stake
                        Test.Cardano.Db.Mock.Unit.Babbage.Tx
                        Test.Cardano.Db.Mock.UnifiedApi
                        Test.Cardano.Db.Mock.Validate

  build-depends:        async
                      , base
                      , bytestring
                      , cardano-api
                      , cardano-crypto-class
                      , cardano-db
                      , cardano-db-sync
                      , cardano-chain-gen
                      , cardano-ledger-alonzo
                      , cardano-ledger-core
                      , cardano-ledger-mary
                      , cardano-ledger-shelley
                      , cardano-node
                      , cardano-prelude
                      , cardano-slotting
                      , cardano-smash-server
                      , containers
                      , contra-tracer
                      , directory
                      , esqueleto
                      , extra
                      , filepath
                      , silently
                      , stm
                      , strict-stm
                      , tasty
                      , tasty-expected-failure
                      , tasty-quickcheck
                      , text
                      , transformers
                      , transformers-except
                      , tasty-hunit
                      , monad-logger
                      , ouroboros-consensus
                      , ouroboros-consensus-cardano
                      , ouroboros-network-api
                      , persistent
                      , persistent-postgresql
                      , postgresql-simple
                      , QuickCheck
                      , quickcheck-state-machine
