cabal-version:          2.4

-- http://haskell.org/cabal/users-guide/

name:                   cardano-db-sync-extended
version:                10.0.2
synopsis:               The Extended Cardano DB Sync node
description:            A Cardano node that follows the Cardano chain and inserts data from the
                        chain into a PostgresQL database. It is "extended" because it maintains an
                        extra Epoch table.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md
                        schema/migration-1-0000-20190730.sql
                        schema/migration-2-0001-20210526.sql
                        schema/migration-2-0009-20210624.sql
                        schema/migration-1-0001-20190730.sql
                        schema/migration-2-0002-20210527.sql
                        schema/migration-3-0001-20190816.sql
                        schema/migration-1-0002-20190912.sql
                        schema/migration-2-0003-20210531.sql
                        schema/migration-3-0002-20200521.sql
                        schema/migration-1-0003-20200211.sql
                        schema/migration-2-0004-20210609.sql
                        schema/migration-3-0003-20200702.sql
                        schema/migration-1-0004-20201026.sql
                        schema/migration-2-0005-20210610.sql
                        schema/migration-3-0004-20200810.sql
                        schema/migration-1-0005-20210311.sql
                        schema/migration-2-0006-20210611.sql
                        schema/migration-3-0005-20210116.sql
                        schema/migration-1-0006-20210531.sql
                        schema/migration-2-0007-20210617.sql
                        schema/migration-3-0006-20210116.sql
                        schema/migration-1-0007-20210611.sql
                        schema/migration-2-0008-20210623.sql
                        schema/migration-3-9999-20200728.sql

custom-setup
  setup-depends:
                        base
                      , Cabal
                      , filepath
                      , cryptonite
                      , bytestring


library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Cardano.DbSync.Plugin.Extended

  build-depends:        base                            >= 4.14         && < 4.16
                      , cardano-db-sync
                      , cardano-sync
                      , persistent

executable cardano-db-sync-extended
  default-language:     Haskell2010
  main-is:              cardano-db-sync-extended.hs
  hs-source-dirs:       gen, app

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -with-rtsopts=-N3

  autogen-modules:      Paths_cardano_db_sync_extended
                        MigrationValidations
  other-modules:        Paths_cardano_db_sync_extended
                        MigrationValidations

  build-depends:        base                            >= 4.14         && < 4.16
                      , cardano-config
                      , cardano-db-sync
                      , cardano-db-sync-extended
                      , cardano-sync
                      , cardano-prelude
                      , cardano-slotting
                      , optparse-applicative
                      , text
