cabal-version:          2.4

-- http://haskell.org/cabal/users-guide/

name:                   cardano-db-sync-extended
version:                11.0.0
synopsis:               The Extended Cardano DB Sync node
description:            A Cardano node that follows the Cardano chain and inserts data from the
                        chain into a PostgresQL database. It is "extended" because it maintains an
                        extra Epoch table.
homepage:               https://github.com/input-output-hk/cardano-db-sync
bug-reports:            https://github.com/input-output-hk/cardano-db-sync/issues
license:                Apache-2.0
license-file:           LICENSE
author:                 IOHK Engineering Team
maintainer:             operations@iohk.io
copyright:              (c) 2019 IOHK
category:               Cryptocurrency
build-type:             Custom
extra-source-files:     CHANGELOG.md
                        schema/*.sql

custom-setup
  setup-depends:
                        base
                      , Cabal
                      , bytestring
                      , cardano-crypto-class
                      , directory
                      , filepath

library
  default-language:     Haskell2010
  hs-source-dirs:       src

  ghc-options:          -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages

  exposed-modules:      Cardano.DbSync.Plugin.Extended

  build-depends:        base                            >= 4.14         && < 4.16
                      , cardano-db-sync
                      , cardano-sync
                      , persistent

executable cardano-db-sync-extended
  default-language:     Haskell2010
  main-is:              cardano-db-sync-extended.hs
  hs-source-dirs:       gen, app

  ghc-options:          -O2
                        -Wall
                        -Wcompat
                        -Wredundant-constraints
                        -Wincomplete-patterns
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wunused-imports
                        -Wunused-packages
                        -Wno-unsafe
                        -threaded
                        -with-rtsopts=-N3

  autogen-modules:      Paths_cardano_db_sync_extended
                        MigrationValidations
  other-modules:        Paths_cardano_db_sync_extended
                        MigrationValidations

  build-depends:        base                            >= 4.14         && < 4.16
                      , cardano-config
                      , cardano-db-sync
                      , cardano-db-sync-extended
                      , cardano-sync
                      , cardano-prelude
                      , cardano-slotting
                      , optparse-applicative
                      , text
